--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Sariyan",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.13.2",
     "package": "^1.0.1",
     "package.json": "^2.0.1"
   }
