--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Sariyan",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
     "package": "^1.0.1",
