--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.9",
     "package": "^1.0.1",
     "package.json": "^2.0.1"
