--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Game Rental Web Application",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node app.js"
   },
   "keywords": [
     "agile",
