--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.12.0",
     "jest": "^27.0.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
