rating model created

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sariyan",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.9",
     "package": "^1.0.1",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "time-stamp": "^2.2.0"
   }
 }
