--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "moment": "^2.29.1",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
+    "node-notifier": "^10.0.0",
     "nodemon": "^2.0.9",
     "package": "^1.0.1",
     "package.json": "^2.0.1",
-    "time-stamp": "^2.2.0"
+    "time-stamp": "^2.2.0",
+    "web-push": "^3.4.5"
   }
 }
