--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
     "jest": "^27.0.6",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.13.2",
+    "mongoose": "^5.13.7",
     "multer": "^1.4.2",
     "node-notifier": "^10.0.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.9",
     "package": "^1.0.1",
     "package.json": "^2.0.1",
