--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jest": "^27.0.6",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mailgun": "^0.5.0",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.29.1",
     "mongoose": "^5.13.7",
     "multer": "^1.4.2",
