--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "formidable": "^1.2.2",
     "jest": "^27.0.6",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
