--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.2",
     "node-notifier": "^10.0.0",
     "nodemailer": "^6.6.3",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.9",
     "package": "^1.0.1",
     "package.json": "^2.0.1",
