--- a/package.json
+++ b/package.json
@@ -18,16 +18,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
-    "formidable": "^1.2.2",
+    "hbs": "^4.1.2",
     "jest": "^27.0.6",
-    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mailgun": "^0.5.0",
-    "mailgun-js": "^0.22.0",
     "moment": "^2.29.1",
     "mongoose": "^5.13.7",
     "multer": "^1.4.2",
