--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.3",
     "express-validator": "^6.12.0",
     "hbs": "^4.1.2",
     "jest": "^27.0.6",
