--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "otp-generator": "^2.0.1",
     "package": "^1.0.1",
     "package.json": "^2.0.1",
+    "socket.io": "^4.1.3",
     "time-stamp": "^2.2.0",
     "web-push": "^3.4.5"
   }
